--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,35 @@ env/
 
 # Jupyter
 .ipynb_checkpoints/
+
+# Node / TypeScript
+node_modules/
+**/node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.pnp.cjs
+.pnp.js
+*.tsbuildinfo
+dist/
+lib/
+build/
+
+# Cloudflare Wrangler / Miniflare
+.wrangler/
+**/.wrangler/
+server/.wrangler/
+.mf/
+**/.mf/
+
+# Cache / temp / logs / coverage
+.cache/
+.tmp/
+tmp/
+temp/
+logs/
+*.log
+coverage/
+.nyc_output/
+.coverage
