--- a/server/wrangler.toml
+++ b/server/wrangler.toml
@@ -2,5 +2,4 @@ name = "pixiv-favorite-gallery"
 main = "src/index.ts"
 compatibility_date = "2026-01-26"
 
-[vars]
-PIXIV_REFRESH_TOKEN = ""
+assets = { directory = "../web/dist" }
