Add Raindrop source support and UI integration

--- a/local-api/.env.example
+++ b/local-api/.env.example
@@ -1,5 +1,8 @@
 # Pixiv refresh token (required)
 PIXIV_REFRESH_TOKEN=
 
+# Raindrop personal access token (optional, for Raindrop source)
+RAINDROP_TOKEN=
+
 # Server port (optional, default: 3010)
 PORT=3010
