--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pixiv-favorite-gallery-web",
+  "name": "random-gallery-web",
   "private": true,
   "type": "module",
   "scripts": {
@@ -17,6 +17,7 @@
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-swipeable": "^7.0.2",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
