--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pixiv-favorite-gallery-api",
+  "name": "@random-gallery/api",
   "private": true,
   "type": "module",
   "scripts": {
@@ -7,8 +7,9 @@
     "start": "tsx src/index.ts"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "@random-gallery/shared": "workspace:*",
     "@hono/node-server": "^1.13.0",
+    "dotenv": "^16.4.5",
     "hono": "^4.6.6"
   },
   "devDependencies": {
