--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "random-gallery-web",
+  "name": "@random-gallery/web",
   "private": true,
   "type": "module",
   "scripts": {
@@ -12,6 +12,7 @@
     "@radix-ui/react-radio-group": "^1.2.4",
     "@radix-ui/react-slider": "^1.2.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@random-gallery/shared": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
