--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,8 @@ pnpm-debug.log*
 *.tsbuildinfo
 dist/
 lib/
-!web/src/lib/
-!web/src/lib/**
+!apps/web/src/lib/
+!apps/web/src/lib/**
 build/
 
 # Cloudflare Wrangler / Miniflare
